[gd_scene load_steps=17 format=2]

[ext_resource path="res://LevelPiece.gd" type="Script" id=1]
[ext_resource path="res://Sprites/icon.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Cursor.png" type="Texture" id=4]
[ext_resource path="res://Sprites/PlayerShip.png" type="Texture" id=5]
[ext_resource path="res://uni0553-webfont.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/MovementCone1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 34.9091, 32 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0.84375, 0, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.945313, 1, 0, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.242188, 0.242188, 0.242188, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="DynamicFont" id=7]

size = 8
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 27.0807, 13.5443 )

[sub_resource type="DynamicFont" id=2]

size = 8
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node" index="0"]

[node name="Level" type="KinematicBody2D" parent="." index="0"]

position = Vector2( 256, 128 )
scale = Vector2( 8, 4 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level" index="0"]

position = Vector2( 25, 24 )
scale = Vector2( 0.171875, 0.3125 )
shape = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level" index="1"]

position = Vector2( 6.51563, -11.0625 )
scale = Vector2( 0.171875, 0.3125 )
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="Level" index="2"]

position = Vector2( 25, 24 )
scale = Vector2( 0.171875, 0.3125 )
z_index = -2
z_as_relative = false
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="Sprite2" type="Sprite" parent="Level" index="3"]

position = Vector2( 6.51563, -11.0625 )
scale = Vector2( 0.171875, 0.3125 )
z_index = -2
z_as_relative = false
texture = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" parent="." index="1"]

position = Vector2( 64, 112 )
scale = Vector2( 0.25, 0.25 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Cursor" type="Sprite" parent="Player" index="0"]

position = Vector2( -256, -448 )
scale = Vector2( 4, 4 )
z_index = 10
z_as_relative = false
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="Player" index="1"]

scale = Vector2( 4, 4 )
z_index = -3
z_as_relative = false
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="ActionUI" type="Control" parent="Player" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -256.0
margin_top = -448.0
margin_right = -128.0
margin_bottom = -384.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button1" type="Button" parent="Player/ActionUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 4.0
margin_right = 108.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Single shot"
flat = false
align = 0
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_group_": true
}

[node name="Button2" type="Button" parent="Player/ActionUI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 18.0
margin_right = 108.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Ground bomb"
flat = false
align = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]
__meta__ = {
"_edit_group_": true
}

[node name="Button3" type="Button" parent="Player/ActionUI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 32.0
margin_right = 108.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Teleport"
flat = false
align = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]
__meta__ = {
"_edit_group_": true
}

[node name="Button4" type="Button" parent="Player/ActionUI" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 46.0
margin_right = 108.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Just move"
flat = false
align = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" index="3"]

shape = SubResource( 8 )

[node name="MovementArea1" type="Sprite" parent="Player" index="4"]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0.0196078 )
position = Vector2( -256, 0 )
scale = Vector2( 8, 8 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -32 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Player/MovementArea1" index="0"]

editor/display_folded = true
position = Vector2( 1.35852, -0.486641 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player/MovementArea1/Area2D" index="0"]

position = Vector2( 31.3324, 0 )
scale = Vector2( 1.01957, 1 )
build_mode = 0
polygon = PoolVector2Array( -8.6189, -16.3982, -1.78764, -19.0931, 6.67311, -21.6, 30.6139, -21.5373, 30.6766, 21.2678, 7.04914, 21.2678, -7.36546, 17.3821, -19.3985, 11.3029, -24.475, 7.41721, -29.6141, 1.33802, -29.4261, -2.48499, -24.2243, -8.56419, -17.393, -12.2618 )

[node name="BottomUI" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="BottomUI" index="0"]

position = Vector2( 0, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Z Index" ]

[node name="Sprite5" type="Sprite" parent="BottomUI" index="1"]

position = Vector2( 32, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite10" type="Sprite" parent="BottomUI" index="2"]

position = Vector2( 64, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite14" type="Sprite" parent="BottomUI" index="3"]

position = Vector2( 96, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite18" type="Sprite" parent="BottomUI" index="4"]

position = Vector2( 128, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite21" type="Sprite" parent="BottomUI" index="5"]

position = Vector2( 160, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite27" type="Sprite" parent="BottomUI" index="6"]

position = Vector2( 192, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite29" type="Sprite" parent="BottomUI" index="7"]

position = Vector2( 224, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite35" type="Sprite" parent="BottomUI" index="8"]

position = Vector2( 256, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite38" type="Sprite" parent="BottomUI" index="9"]

position = Vector2( 288, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite41" type="Sprite" parent="BottomUI" index="10"]

position = Vector2( 320, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite45" type="Sprite" parent="BottomUI" index="11"]

position = Vector2( 352, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite51" type="Sprite" parent="BottomUI" index="12"]

position = Vector2( 384, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite55" type="Sprite" parent="BottomUI" index="13"]

position = Vector2( 416, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite57" type="Sprite" parent="BottomUI" index="14"]

position = Vector2( 448, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite61" type="Sprite" parent="BottomUI" index="15"]

position = Vector2( 480, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite2" type="Sprite" parent="BottomUI" index="16"]

position = Vector2( 16, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite7" type="Sprite" parent="BottomUI" index="17"]

position = Vector2( 48, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite9" type="Sprite" parent="BottomUI" index="18"]

position = Vector2( 80, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite13" type="Sprite" parent="BottomUI" index="19"]

position = Vector2( 112, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite20" type="Sprite" parent="BottomUI" index="20"]

position = Vector2( 144, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite22" type="Sprite" parent="BottomUI" index="21"]

position = Vector2( 176, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite26" type="Sprite" parent="BottomUI" index="22"]

position = Vector2( 208, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite32" type="Sprite" parent="BottomUI" index="23"]

position = Vector2( 240, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite36" type="Sprite" parent="BottomUI" index="24"]

position = Vector2( 272, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite40" type="Sprite" parent="BottomUI" index="25"]

position = Vector2( 304, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite44" type="Sprite" parent="BottomUI" index="26"]

position = Vector2( 336, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite48" type="Sprite" parent="BottomUI" index="27"]

position = Vector2( 368, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite52" type="Sprite" parent="BottomUI" index="28"]

position = Vector2( 400, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite56" type="Sprite" parent="BottomUI" index="29"]

position = Vector2( 432, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite59" type="Sprite" parent="BottomUI" index="30"]

position = Vector2( 464, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite64" type="Sprite" parent="BottomUI" index="31"]

position = Vector2( 496, 256 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite3" type="Sprite" parent="BottomUI" index="32"]

position = Vector2( 16, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite6" type="Sprite" parent="BottomUI" index="33"]

position = Vector2( 48, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite11" type="Sprite" parent="BottomUI" index="34"]

position = Vector2( 80, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite16" type="Sprite" parent="BottomUI" index="35"]

position = Vector2( 112, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite19" type="Sprite" parent="BottomUI" index="36"]

position = Vector2( 144, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite23" type="Sprite" parent="BottomUI" index="37"]

position = Vector2( 176, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite25" type="Sprite" parent="BottomUI" index="38"]

position = Vector2( 208, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite30" type="Sprite" parent="BottomUI" index="39"]

position = Vector2( 240, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite33" type="Sprite" parent="BottomUI" index="40"]

position = Vector2( 272, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite37" type="Sprite" parent="BottomUI" index="41"]

position = Vector2( 304, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite43" type="Sprite" parent="BottomUI" index="42"]

position = Vector2( 336, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite47" type="Sprite" parent="BottomUI" index="43"]

position = Vector2( 368, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite49" type="Sprite" parent="BottomUI" index="44"]

position = Vector2( 400, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite53" type="Sprite" parent="BottomUI" index="45"]

position = Vector2( 432, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite60" type="Sprite" parent="BottomUI" index="46"]

position = Vector2( 464, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite63" type="Sprite" parent="BottomUI" index="47"]

position = Vector2( 496, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite4" type="Sprite" parent="BottomUI" index="48"]

position = Vector2( 0, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite8" type="Sprite" parent="BottomUI" index="49"]

position = Vector2( 32, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite12" type="Sprite" parent="BottomUI" index="50"]

position = Vector2( 64, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite15" type="Sprite" parent="BottomUI" index="51"]

position = Vector2( 96, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite17" type="Sprite" parent="BottomUI" index="52"]

position = Vector2( 128, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite24" type="Sprite" parent="BottomUI" index="53"]

position = Vector2( 160, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite28" type="Sprite" parent="BottomUI" index="54"]

position = Vector2( 192, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite31" type="Sprite" parent="BottomUI" index="55"]

position = Vector2( 224, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite34" type="Sprite" parent="BottomUI" index="56"]

position = Vector2( 256, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite39" type="Sprite" parent="BottomUI" index="57"]

position = Vector2( 288, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite42" type="Sprite" parent="BottomUI" index="58"]

position = Vector2( 320, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite46" type="Sprite" parent="BottomUI" index="59"]

position = Vector2( 352, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite50" type="Sprite" parent="BottomUI" index="60"]

position = Vector2( 384, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite54" type="Sprite" parent="BottomUI" index="61"]

position = Vector2( 416, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite58" type="Sprite" parent="BottomUI" index="62"]

position = Vector2( 448, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite62" type="Sprite" parent="BottomUI" index="63"]

position = Vector2( 480, 272 )
z_index = -1
z_as_relative = false
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="RichTextLabel" type="RichTextLabel" parent="BottomUI" index="64"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 244.0
margin_right = 87.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Power 100/100"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="Player/ActionUI/Button1" to="Player" method="_on_Button1_pressed"]

[connection signal="pressed" from="Player/ActionUI/Button2" to="Player" method="_on_Button2_pressed"]

[connection signal="pressed" from="Player/ActionUI/Button3" to="Player" method="_on_Button3_pressed"]

[connection signal="pressed" from="Player/ActionUI/Button4" to="Player" method="_on_Button4_pressed"]

[connection signal="input_event" from="Player/MovementArea1/Area2D" to="Player" method="_on_Area2D_input_event"]


